# vip

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CHRONICLE_TEST_PLAN.md  Dockerfile  IMPLEMENTATION_GUIDE.md  LICENSE  README.md  compose.mock-idp.yml  compose.yml  index.html  justfile  pyproject.toml  vip.toml.example  vip.toml.local
.claude/: settings.json
.claude/agents/: test-architect.md  weekly-summary.md
.claude/scripts/: setup-gh.sh
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md  zizmor.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/agents/: agentic-workflows.agent.md
.github/aw/: actions-lock.json
.github/triage-bot/: README.md
.github/workflows/: add-to-team-project.yml  ci.yml  connect-integration.yml  connect-smoke.yml  copilot-setup-steps.yml  docker.yml  example-report.yml  implement-plan.lock.yml  implement-plan.md  install-flow-smoke.yml  issue-triage.lock.yml  issue-triage.md  linux-smoke.yml  mac-smoke.yml  mock-idp-e2e.yml  nightly-audit.yml  packagemanager-smoke.yml  pr-title.yml  preview-screenshot-gallery.lock.yml  preview-screenshot-gallery.md  preview.yml  publish.yml  release.yml  rhel-smoke.yml  security-audit.yml  website-preview.yml  website.yml  weekly-summary.yml  workbench-smoke.yml
docker/: playwright-smoke.py  rhel-smoke.py
docker/connect/: Dockerfile.oidc  entrypoint-oidc.sh  rstudio-connect-oidc.gcfg  rstudio-connect.gcfg
docker/keycloak/: gen-totp-secret.sh  realm-vip.json
docker/opensuse-leap/: Dockerfile
docker/packagemanager/: rstudio-pm.gcfg
docker/rhel10/: Dockerfile
docker/rhel9/: Dockerfile  smoke.py
docker/tls/: gen-certs.sh
docker/workbench/: Dockerfile.oidc  entrypoint-oidc.sh  oidc-init.sh  startup.sh
docs/: agentic-workflows.md  authentication.md  configuration.md  deployment-verification.md  development.md  getting-started.md  reporting.md  rhel.md  shiny-app.md  test-architecture.md  test-categories.md
example-report/: details.html  index.html  search.json
examples/cross_product_validation/: README.md  conftest.py  test_gxp_validation.feature  test_gxp_validation.py
examples/custom_tests/: conftest.py  test_custom_check.feature  test_custom_check.py
feature-matrix/: index.html
getting-started/: index.html
plans/: connect-ci-testing.md  showboat-agent-pr-demos.md  workbench-ci-testing.md
pr-preview-site/pr-100/: index.html
pr-preview-site/pr-102/: index.html
pr-preview-site/pr-104/: index.html
pr-preview-site/pr-110/: index.html
pr-preview-site/pr-111/: index.html
pr-preview-site/pr-114/: index.html
pr-preview-site/pr-116/: index.html
pr-preview-site/pr-118/: index.html
pr-preview-site/pr-120/: index.html
pr-preview-site/pr-121/: index.html
pr-preview-site/pr-122/: index.html
pr-preview-site/pr-123/: index.html
pr-preview-site/pr-124/: index.html
pr-preview-site/pr-126/: index.html
pr-preview-site/pr-128/: index.html
pr-preview-site/pr-132/: index.html
pr-preview-site/pr-133/: index.html
pr-preview-site/pr-134/: index.html
pr-preview-site/pr-135/: index.html
pr-preview-site/pr-136/: index.html
pr-preview-site/pr-137/: index.html
pr-preview-site/pr-139/: index.html
pr-preview-site/pr-140/: index.html
pr-preview-site/pr-141/: index.html
pr-preview-site/pr-146/: index.html
pr-preview-site/pr-153/: index.html
pr-preview-site/pr-154/: index.html
pr-preview-site/pr-157/: index.html
qa-overview/: index.html
report/: _quarto.yml  details.qmd  index.html  index.qmd  results.json.example  styles.css
scripts/: generate-feature-matrix.py  generate-test-catalog.py  opensuse-leap-smoke.sh  rhel-smoke.sh
se-overview/: index.html
selftests/: conftest.py  test_app.py  test_auth.py  test_auth_tls_e2e.py  test_cli_cleanup.py  test_cli_report.py  test_cli_scaffold.py  test_cli_status.py  test_cli_verify.py  test_cli_version.py  test_client_auth.py  test_clients_connect.py  test_clients_tls.py  test_clients_workbench_api.py  test_cluster_aws.py  test_cluster_azure.py  test_cluster_target.py  test_config.py  test_config_repr.py  test_connect_cleanup.py  test_credentials.py  test_dependency_pins.py  test_gateway_cookie_passthrough.py  test_gherkin.py  test_http_semantics.py  test_idp.py  test_job.py  test_job_script_escaping.py  test_load_engine.py  test_pages.py  test_performance_steps.py  test_plugin.py  test_publish_to_connect_fixtures.py  test_reporting.py  test_ssl_helper.py  test_step_naming.py  test_system_checks.py  test_timeouts.py  test_totp.py  test_verify_credentials.py  (+16 more)
shiny-app/: index.html
tests/: conftest.py  helpers.py  index.html  troubleshooting.toml
validation_docs/: demo-477-positron-console.md  demo-478-jupyterlab-launch.md  demo-480-workbench-ordering.md  demo-491-cleanup-logo-race.md  demo-binary-package-tests.md  demo-bot-fix-issue-283.md  demo-bot-implement-issue-301.md  demo-bot-implement-issue-302.md  demo-bot-implement-issue-307.md  demo-bot-implement-issue-308.md  demo-bot-implement-issue-344.md  demo-chromium-revision-check.md  demo-chronicle-tests.md  demo-connect-chronicle-status.md  demo-connect-content-cleanup.md  demo-connect-super-post-init.md  demo-connect-system-checks.md  demo-custom-extension-example.md  demo-data-source-stray-collection.md  demo-debug-pypi-publishing.md  demo-deterministic-lockfile.md  demo-disable-performance-default.md  demo-fix-268-insecure-tls-skip.md  demo-fix-280-extensions-search-input.md  demo-fix-connect-user-list-skip.md  demo-fix-example-report-pm-license.md  demo-fix-issue-169-headless-auth-deps.md  demo-fix-issue-171.md  demo-fix-issue-173-headless-auth-skip.md  demo-fix-issue-182.md  demo-fix-issue-183.md  demo-fix-locust-install-instructions.md  demo-fix-package-build.md  demo-fix-rstudio-console-prompt-wait.md  demo-fix-ssl-redirect-alb.md  demo-fix-terminal-run-timeout.md  demo-fix-workbench-login-display-name.md  demo-force-vip-release.md  demo-gh-pages-coexistence.md  demo-git-anonymous-auth.md  (+45 more)
website/: astro.config.mjs  package-lock.json  package.json
(+3212 files in other folders)
