[project]
name = "posit-vip"
version = "0.26.8"
description = "Verified Installation of Posit - An extensible test suite for validating Posit Team deployments"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Elliot Murphy", email = "elliot.murphy@posit.co" },
    { name = "Ian Flores Siaca", email = "iflores.siaca@posit.co" },
]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "httpx>=0.27,<1",
    "playwright>=1.40",
    "pytest>=9.0.3",  # CVE-2025-71176 fix
    "pytest-bdd>=7.0",
    "pytest-playwright>=0.5",
    "pytest-xdist>=3.0",
    "shiny[theme]>=1.0",
    "brand-yml",
    "htmltools",
    "tomli>=2.0;python_version<'3.11'",
    "requests>=2.33.0",  # transitive via pytest-playwright; pinned to track updates
    "pygments>=2.20.0",  # CVE-2026-4539 fix
    "python-multipart>=0.0.26",  # CVE-2026-40347 fix; transitive via shiny
    "pip>=26.1",  # CVE-2026-3219 fix; transitive via pip-api
]

[project.optional-dependencies]
report = [
    "jinja2>=3.1",
    "jupyter",
    "ipykernel",
    "nbformat>=5.7",
    "nbclient>=0.8",
    "nbconvert>=7.17.1",  # CVE-2026-39377, CVE-2026-39378 fix; transitive via jupyter
    "tornado>=6.5.5",  # CVE-2026-31958 fix; transitive via jupyter
]
cluster = [
    "boto3>=1.26",
    "azure-identity>=1.12",
    "azure-mgmt-containerservice>=20.0",
    "pyyaml>=6.0",
    "pyjwt>=2.12.0",  # CVE-2026-32597 fix; transitive via msal
    "cryptography>=46.0.7",  # CVE-2026-39892 fix; transitive via boto3/urllib3
]
load = [
    "locust>=2.20",
]
dev = [
    "ruff>=0.15.0,<0.16",
    "mypy>=1.10",
    "types-PyYAML>=6.0",
    "pytest-cov>=6.0",
    "pip-audit>=2.7",
]

[project.urls]
Homepage = "https://posit-dev.github.io/vip/"
Repository = "https://github.com/posit-dev/vip"
Documentation = "https://posit-dev.github.io/vip/getting-started/"
Changelog = "https://github.com/posit-dev/vip/blob/main/CHANGELOG.md"

[project.scripts]
vip = "vip.cli:main"

[project.entry-points.pytest11]
vip = "vip.plugin"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vip", "src/vip_tests"]

[tool.pytest.ini_options]
testpaths = ["src/vip_tests"]
addopts = "-n auto --dist loadgroup"
# Warning filters live in src/vip/plugin.py::pytest_configure so they apply
# anywhere vip is installed, not just runs from this repo.
markers = [
    "connect: tests for Posit Connect",
    "workbench: tests for Posit Workbench",
    "package_manager: tests for Posit Package Manager",
    "prerequisites: prerequisite checks that run first",
    "cross_product: tests that span multiple products",
    "performance: performance validation tests",
    "security: security validation tests",
    "config_hygiene: checks of VIP's own configuration (opt-in; excluded by default)",
    "min_version(product, version): only run when product meets minimum version",
    "if_applicable: test is skipped when the feature is not configured",
]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
version_variables = ["src/vip/__init__.py:__version__"]
major_on_zero = false
branch = "main"
commit_message = "chore(release): {version}"
tag_format = "v{version}"

[tool.semantic_release.remote]
ignore_token_for_push = true

[tool.semantic_release.changelog]
generate = true
file = "CHANGELOG.md"

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
ignore_missing_imports = true

[tool.ruff]
line-length = 100
src = ["src", "selftests", "examples"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
