[project]
name = "posit-vip"
version = "0.55.2"
description = "Verified Installation of Posit - An extensible test suite for validating Posit Team deployments"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Elliot Murphy", email = "elliot.murphy@posit.co" },
    { name = "Ian Flores Siaca", email = "iflores.siaca@posit.co" },
]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "httpx>=0.27,<1",
    "playwright==1.61.0",  # exact-pinned: shapes vip run output; see docs/development.md
    "pyotp~=2.9",
    "pytest==9.1.1",  # exact-pinned; at/above CVE-2025-71176 floor (9.0.3)
    "pytest-bdd==8.1.0",  # exact-pinned
    "pytest-order==1.5.0",  # exact-pinned
    "pytest-playwright==0.8.0",  # exact-pinned
    "pytest-xdist==3.8.0",  # exact-pinned
    "tomli>=2.0,<3;python_version<'3.11'",
    "requests>=2.33.0,<3",  # transitive via pytest-playwright; capped to track updates
    "pygments>=2.20.0,<3",  # CVE-2026-4539 fix
    "pip>=26.1.2,<27",  # CVE-2026-3219, PYSEC-2026-196 fix; transitive via pip-api
    "mako>=1.3.12,<2",  # CVE-2026-44307 fix; transitive via pytest-bdd
    "idna>=3.15,<4",  # CVE-2026-45409 fix; transitive via httpx/requests/anyio
]

[project.optional-dependencies]
report = [
    "jinja2>=3.1,<4",
    "jupyter<2",
    "ipykernel<8",
    "nbformat>=5.7,<6",
    "nbclient>=0.8,<1",
    "nbconvert>=7.17.1,<8",  # CVE-2026-39377, CVE-2026-39378 fix; transitive via jupyter
    "mistune>=3.2.1,<4",  # CVE-2026-33079 fix; transitive via nbconvert
    "tornado>=6.5.7,<7",  # CVE-2026-31958, GHSA-pw6j-qg29-8w7f fix; transitive via jupyter
    "bleach>=6.4.0,<7",  # GHSA-gj48-438w-jh9v, GHSA-8rfp-98v4-mmr6 fix; transitive via nbconvert[css]
    "jupyterlab>=4.5.9,<5",  # GHSA-vmhf-c436-hxj4 fix; transitive via jupyter
]
load = [
    "locust>=2.20,<3",
    "msgpack>=1.2.1,<2",  # GHSA-6v7p-g79w-8964 fix; transitive via locust
    "python-engineio>=4.13.2,<5",  # CVE-2026-48802, CVE-2026-48809 fix; transitive via locust
    "python-socketio>=5.16.2,<6",  # CVE-2026-48804 fix; transitive via locust
]
dev = [
    "ruff>=0.15.0,<0.16",
    "mypy>=1.10",
    "pytest-cov>=6.0",
    "pip-audit>=2.7",
    "msgpack>=1.2.1",  # GHSA-6v7p-g79w-8964 fix; transitive via pip-audit (cachecontrol)
]

[project.urls]
Homepage = "https://posit-dev.github.io/vip/"
Repository = "https://github.com/posit-dev/vip"
Documentation = "https://posit-dev.github.io/vip/getting-started/"
Changelog = "https://github.com/posit-dev/vip/blob/main/CHANGELOG.md"

[project.scripts]
vip = "vip.cli:main"

[project.entry-points.pytest11]
vip = "vip.plugin"



























































[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
# Pin the uv version used in this repo so `uv.lock` is reproducible across
# machines. Older uv (< 0.11) strips the `upload-time` wheel annotations and
# uses an older lockfile revision, which churns ~2000 lines on any relock. The
# floor rejects those versions for every uv command; `just relock` pins an exact
# version on top of it. See docs/development.md ("The lockfile").
required-version = ">=0.11"

[tool.hatch.build.targets.wheel]
packages = ["src/vip", "src/vip_tests"]

[tool.hatch.build.targets.wheel.force-include]
"examples/cross_product_validation" = "vip/_scaffold/cross_product_validation"
# Quarto report templates so `vip report` works when installed as a wheel,
# not only from a source checkout. Copied into the working ./report dir by
# run_report(). Keep this list in sync with cli._REPORT_TEMPLATE_FILES.
"report/index.qmd" = "vip/_report/index.qmd"
"report/details.qmd" = "vip/_report/details.qmd"
"report/_quarto.yml" = "vip/_report/_quarto.yml"
"report/styles.css" = "vip/_report/styles.css"

[tool.pytest.ini_options]
testpaths = ["src/vip_tests"]
addopts = "-n auto --dist loadgroup"
# Warning filters live in src/vip/plugin.py::pytest_configure so they apply
# anywhere vip is installed, not just runs from this repo.
markers = [
    "connect: tests for Posit Connect",
    "workbench: tests for Posit Workbench",
    "package_manager: tests for Posit Package Manager",
    "prerequisites: prerequisite checks that run first",
    "cross_product: tests that span multiple products",
    "performance: performance validation tests (opt-in; excluded by default)",
    "security: security validation tests",
    "config_hygiene: checks of VIP's own configuration (opt-in; excluded by default)",
    "min_version(product, version): only run when product meets minimum version",
    "if_applicable: test is skipped when the feature is not configured",
    "api_auth: test requires only an API key, not browser credentials",
]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
version_variables = ["src/vip/__init__.py:__version__"]
major_on_zero = false
branch = "main"
commit_message = "chore(release): {version}"
tag_format = "v{version}"

[tool.semantic_release.remote]
ignore_token_for_push = true

[tool.semantic_release.changelog]
generate = true
file = "CHANGELOG.md"

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
ignore_missing_imports = true

[tool.ruff]
line-length = 100
src = ["src", "selftests", "examples"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
